--- a/unu.html
+++ b/unu.html
@@ -73,7 +73,7 @@ Your browser does not support the audio element.
                 <tr>
                     <td align="center">
                         <font size="3rem" color="#AF5B5B">
-                            <b><h1>-CURSURI PE CARE LE-AM FREGVENTAT- </h1></b>
+                            <b><h1>-CURSURI PE CARE LE-AM FRECVENTAT- </h1></b>
                         </font>
                     </td>
                 </tr>
